<resources>
    <string name="app_name">AppRiUso</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">REGISTRATI</string>
    <string name="login_text">RiUso</string>
    <string name="action_logout">Esci</string>
    <string name="invalid_message">Campo vuoto</string>
    <string name="take_picture_tooltip">Scatta una foto all\'articolo che vuoi regalare</string>
    <string name="insert_hint">Scrivi una breve descrizione dell\'articolo</string>
    <string name="location_tooltip">Inserisci il luogo dove avverrà il ritiro dell\'articolo</string>
    <string name="name_hint">Inserisci il nome dell\'articolo</string>
    <string name="slogan">Già usato?, RIusalo!!</string>
    <string name="action_settings">Articoli inviati</string>
    <string name="category_tooltip">Scegli la categoria d\'appartenenza dell\'articolo</string>
    <string-array name="Categorie">
        <item>Mobilio</item>
        <item>Elettronica</item>
        <item>Utensili</item>
        <item>Altro</item>
    </string-array>
    <string-array name="CategorieRicerca">
        <item>Tutto</item>
        <item>Mobilio</item>
        <item>Elettronica</item>
        <item>Utensili</item>
        <item>Altro</item>
    </string-array>
</resources>